before_create_register_page

--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -30,7 +30,7 @@
 <% end %>
 </br>
 <% @ticket.comments.each do |comment| %>
-	<%= comment.body %> - created at: <%= comment.created_at %>
+	<%= comment.body %> - created at: <%= comment.created_at %> by <%= comment.user.name %> <%= comment.user.last_name %>
   </br>
 <% end %>
 </p>
